# inveniordm-ai-curation-poc

./: .invenio  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg
assets/js/invenio_app_rdm/overridableRegistry/: DepositRecordSerializer.js  RemoteSelectField.js  SubjectsField.js  mapping.js
assets/js/invenio_app_rdm/overridableRegistry/fields/: index.js
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
site/: .gitkeep  setup.cfg
site/inveniordm_ai_curation_poc/: views.py  webpack.py
vendorized/invenio-ai-poc/: setup.cfg  setup.py
vendorized/invenio-ai-poc/invenio_ai_poc/: __init__.py  views.py
