
[metadata]
name = inveniordm-ai-curation-poc

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    inveniordm_ai_curation_poc_views = inveniordm_ai_curation_poc.views:create_blueprint
invenio_assets.webpack =
    inveniordm_ai_curation_poc_theme = inveniordm_ai_curation_poc.webpack:theme
