[aliases]
test = pytest

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[options]
install_requires =
    click>=8.1.3,<9.0
    flask>=2.0,<3.0
    # invenio-access>=1.4.5,<2.0.0
    # invenio-records-resources>=1.0.9,<2.0
    # invenio-files-rest>=1.4.0,<2.0

[options.extras_require]
tests =
    invenio-app>=1.3.0,<2.0.0
    # quirk of pytest-invenio requiring it
    invenio-search[opensearch2]>=2.1.0,<3.0.0
    pytest-invenio>=2.1.1,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    invenio_ai_poc = invenio_ai_poc.views:blueprint
# invenio_assets.webpack =
#     invenio_ai_poc = invenio_ai_poc.webpack:theme
# flask.commands =
#     ai_poc = invenio_ai_poc.cli:prism
